# audhd

./: .gitignore  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  package.json
ai/assistant/: _layout.tsx  index.tsx
ai/models/: assistant.py
ai/queries/: assistant.py
api/: .dockerignore  Dockerfile  dockerfile.dev  entrypoint.sh  main.py  pyproject.toml
api/config/: calendar_mgr.py  database.py  logging.py
api/middleware/: logging.py
api/models/: assistant.py  calendar.py  jwt.py  tasks.py  usage.py  users.py
api/queries/: analyzer.py  assistant.py  assistantAnthropic.py  auth.py  calendar.py  tasks.py  users.py
api/routes/: assistant.py  auth.py  calendar.py  tasks.py  users.py
api/tests/: conftest.py  test_auth_bad.py  test_auth_good.py  test_auth_security.py  test_cal_bad.py  test_cal_good.py  test_cal_security.py  test_tasks_bad.py  test_tasks_good.py  test_tasks_security.py
api/utils/: authentication.py  calendar_mgr.py  database.py  exceptions.py
app/: .dockerignore  .gitignore  Dockerfile  GoogleService-Info.plist  app.json  babel.config.js  eas.json  google-services.json  metro.config.js  package.json  run.sh  tailwind.config.js  tsconfig.json
app/app/: +not-found.tsx  _layout.tsx
app/types/: auth.ts
dashboard/: index.html  netlify.toml  package.json  pnpm-lock.yaml  tailwind.config.js
dep/: App.tsx
notes/: notes.md
src/: .gitignore  app.json  package-lock.json  package.json
src/components/: Header.tsx  TaskForm.tsx  TaskList.tsx
src/screens/: SignInScreen.tsx
src/services/: firebase.ts  taskService.ts
(+62 files in other folders)
