[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Lillith Long lilli@adeptexec.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
pydantic = "^2.10.2"
odmantic = "^1.0.2"
pytest = "^8.3.3"
motor = "^3.6.0"
black = "^24.10.0"
flake8 = "^7.1.1"
typing-extensions = "^4.12.2"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
